# django-ownsms

./: .gitignore  LICENSE  QUICKSTART.md  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
src/ownsms/: admin.py  apps.py  auth.py  conf.py  errors.py  models.py  openapi.yaml  phone.py  segments.py  tokens.py  urls.py
src/ownsms/management/commands/: ownsms_housekeeping.py  ownsms_webhooks.py
src/ownsms/migrations/: 0001_initial.py  0002_sim_daily_quota_sim_jitter_max_sim_jitter_min_and_more.py  0003_pairingcode.py  0004_alter_account_email.py  0005_message_scheduled_at_campaign_message_campaign.py  0006_webhook_webhookdelivery.py  0007_apikey_is_test_message_callback_url_message_is_test.py  0008_apikey_ip_allowlist_auditlog.py  0009_alter_account_options_alter_apikey_options_and_more.py  0010_campaign_idempotency_key_message_msg_device_status_and_more.py
src/ownsms/services/: audit.py  campaigns.py  dispatch.py  messaging.py  registration.py  templating.py  webhooks.py
src/ownsms/views/: account.py  campaigns.py  device.py  devices.py  docs.py  keys.py  messages.py  registration.py  webhooks.py
testproject/: settings.py  urls.py
tests/: conftest.py  test_auth.py  test_campaigns_api.py  test_campaigns_idempotency.py  test_credmgmt_scopes.py  test_device_api.py  test_dispatch_service.py  test_docs.py  test_housekeeping.py  test_management_api.py  test_messages_api.py  test_messaging_service.py  test_models.py  test_phone.py  test_properties.py  test_public_status.py  test_readapi.py  test_registration_api.py  test_security.py  test_segments.py  test_send_validation.py  test_sendapi_extra.py  test_smoke.py  test_tokens.py  test_webhooks_api.py
